k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:13.1
          ports:
            - containerPort: 5432
