k8s/reviewfilmes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewfilmes
  template:
    metadata:
      labels:
        app: reviewfilmes
    spec:
      containers:
        - name: reviewfilmes
          image: fabricioveronez/rv-teste
          ports:
            - containerPort: 8080
