k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec: 
  selector:
    app: postgre
  ports:
    - port: 5432
