k8s/reviewfilmes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes
spec:
  selector:
    app: reviewfilmes
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
