k8s/reviewfilmes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewfilmes
  labels:
    name: reviewfilmes
spec:
  ingressClassName: nginx
  rules:
    - host: homologacao.fabricioveronez.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: reviewfilmes
                port:
                  number: 80
